Store decks as int rather than binary

--- a/sim_draft_clean.ipynb
+++ b/sim_draft_clean.ipynb
@@ -34,7 +34,7 @@
     "        random.seed(seed)\n",
     "        random.shuffle(cards)\n",
     "        #print(cards)\n",
-    "        total.append(''.join(cards))\n",
+    "        total.append(int(''.join(cards), 2))\n",
     "    return total"
    ]
   },
@@ -52,6 +52,7 @@
     "    p2_num_tricks = 0\n",
     "    p1_num_cards = 0\n",
     "    p2_num_cards = 0\n",
+    "    deck = bin(deck)[2:]\n",
     "    \n",
     "    for card in deck:\n",
     "        stack.append(card)\n",
