--- a/visualization_final_code.ipynb
+++ b/visualization_final_code.ipynb
@@ -39,7 +39,7 @@
     "#n = d['decks'] #replace with whatever the key ends up being\n",
     "#order needs to be confirmed with the data\n",
     "x_axis_labels = ['BBB','BBR','BRB','BRR','RBB','RBR','RRB','RRR'] #player 1\n",
-    "y_axis_labels = ['RBB','RBB','BBR','BBR','RRB','RRB','BRR','BRR'] #player 2\n",
+    "y_axis_labels = ['BBB','BBR','BRB','BRR','RBB','RBR','RRB','RRR'] #player 2\n",
     "\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 4))\n",
     "\n",
