Added simulation.py where all simulation-related functions will be stored

--- a/sim.ipynb
+++ b/sim.ipynb
@@ -13,7 +13,9 @@
     "import re\n",
     "from typing import List, Tuple\n",
     "from itertools import product\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import sys"
    ]
   },
   {
@@ -2353,7 +2355,7 @@
     "bcards = ['0'] * 26\n",
     "cards = rcards+bcards # total 52 cards\n",
     "ngames = 1000000\n",
-    "#total = np.empty((ngames, 52), dtype='<U1')\n",
+    "total = np.empty((ngames, 52), dtype='<U1')\n",
     "#seeds = np.empty((ngames,52))\n",
     "results = []\n",
     "\n",
