Optimized functions in simulation.py

--- a/sim.ipynb
+++ b/sim.ipynb
@@ -2426,7 +2426,94 @@
    "id": "629dd9ae-22d5-4d58-9bb0-d0a6162fd7f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def old_sim(ngames: int) -> pd.DataFrame:\n",
+    "    start = time.time()\n",
+    "\n",
+    "    rcards = ['1'] * 26 \n",
+    "    bcards = ['0'] * 26\n",
+    "    cards = rcards+bcards # total 52 cards\n",
+    "    #total = np.empty((ngames, 52), dtype='<U1')\n",
+    "    #seeds = np.empty((ngames,52))\n",
+    "    total = []\n",
+    "    for gamenum in range(ngames):\n",
+    "        random.seed(gamenum)\n",
+    "        #seeds[gamenum] = gamenum\n",
+    "        total.append(random.sample(cards, len(cards)))  # Use cards.copy() to keep the original list intact\n",
+    "    \n",
+    "    df = pd.DataFrame({'Decks':total})\n",
+    "    patterns = [\n",
+    "        '111',\n",
+    "        '110',\n",
+    "        '101',\n",
+    "        '100',\n",
+    "        '011',\n",
+    "        '010',\n",
+    "        '001',\n",
+    "        '000'\n",
+    "    ]\n",
+    "    type = [\n",
+    "        'trick',\n",
+    "        'cards'\n",
+    "    ]\n",
+    "    \n",
+    "    p_df = pd.DataFrame(patterns, columns=['patterns'])\n",
+    "    pattern_df = p_df.merge(p_df, how = 'cross')\n",
+    "    pattern_df.rename(columns={'patterns_x':'p1guess','patterns_y':'p2guess'},inplace=True)\n",
+    "    game_df = df.merge(pattern_df, how = 'cross')\n",
+    "    \n",
+    "    scores_series = game_df.apply(lambda x: run_game(x.Decks,x.p1guess,x.p2guess), axis=1)\n",
+    "    scores_df = pd.DataFrame(scores_series.to_list(), columns = ['p1tricks','p2tricks',\n",
+    "                                                                 'trick_outcome','p1score_cards', \n",
+    "                                                                 'p2score_cards', 'cards_outcome'])\n",
+    "    \n",
+    "    final_df = pd.concat([game_df,scores_df], axis=1)\n",
+    "    \n",
+    "    end = time.time()\n",
+    "    print(round((end - start),4))\n",
+    "\n",
+    "    return final_df\n",
+    "\n",
+    "    \n",
+    "def optimized_sim(ngames: int) -> pd.DataFrame:\n",
+    "    start = time.time()\n",
+    "    \n",
+    "    rcards = ['1'] * 26 \n",
+    "    bcards = ['0'] * 26\n",
+    "    cards = rcards+bcards # total 52 cards\n",
+    "    #total = np.empty((ngames, 52), dtype='<U1')\n",
+    "    #seeds = np.empty((ngames,52))\n",
+    "    results = []\n",
+    "    \n",
+    "    patterns = [\n",
+    "        '111',\n",
+    "        '110',\n",
+    "        '101',\n",
+    "        '100',\n",
+    "        '011',\n",
+    "        '010',\n",
+    "        '001',\n",
+    "        '000'\n",
+    "    ]\n",
+    "    \n",
+    "    for gamenum in range(ngames):\n",
+    "        random.seed(gamenum)\n",
+    "        #seeds[gamenum] = gamenum\n",
+    "        ndeck = random.sample(cards, len(cards))  # Use cards.copy() to keep the original list intact\n",
+    "        \n",
+    "        for p1guess, p2guess in product(patterns, patterns):\n",
+    "            result = run_game(ndeck, p1guess, p2guess)\n",
+    "            results.append((ndeck, p1guess, p2guess, *result))\n",
+    "    \n",
+    "    final_df = pd.DataFrame(results, columns=['Deck', 'p1guess', 'p2guess',\n",
+    "                                              'p1tricks', 'p2tricks', 'trick_outcome',\n",
+    "                                              'p1cards', 'p2cards', 'cards_outcome'])\n",
+    "    \n",
+    "    end = time.time()\n",
+    "    print(round((end - start),4))\n",
+    "    \n",
+    "    return final_df"
+   ]
   }
  ],
  "metadata": {
