--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "b70c417c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'sim' from 'simulation' (c:\\Users\\micha\\OneDrive - William & Mary\\Desktop\\Fall_2024\\DATA440\\project-penney-440\\simulation.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mplay\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m play\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvisualization\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m heatmap\n",
+      "File \u001b[1;32mc:\\Users\\micha\\OneDrive - William & Mary\\Desktop\\Fall_2024\\DATA440\\project-penney-440\\play.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpenney_db1\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m make_database\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msimulation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sim\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplay\u001b[39m(path, ngames: \u001b[38;5;28mint\u001b[39m, seed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m     simulation \u001b[38;5;241m=\u001b[39m sim(ngames, seed)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'sim' from 'simulation' (c:\\Users\\micha\\OneDrive - William & Mary\\Desktop\\Fall_2024\\DATA440\\project-penney-440\\simulation.py)"
+     ]
+    }
+   ],
    "source": [
     "from play import play\n",
     "from visualization import heatmap"
