Added more documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -57,8 +57,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c655e1ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from processing_updated import play\n",
+    "from visualization import make_heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4f713c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "play(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "560ef577",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "results/results.json does not exist. You should run the simulate data function",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\micha\\OneDrive - William & Mary\\Desktop\\Fall_2024\\DATA440\\project-penney-440\\visualization.py:320\u001b[0m, in \u001b[0;36mmake_heatmap\u001b[1;34m(data, data_ties, annots, n, win_type, title, hide_y, cbar_single, ax, bundle, letters, format)\u001b[0m\n\u001b[0;32m    319\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 320\u001b[0m     var_cards,var_tricks, card_ties, trick_ties, n_default \u001b[38;5;241m=\u001b[39m \u001b[43mget_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mresults/results.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[0;32m    321\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[1;32mc:\\Users\\micha\\OneDrive - William & Mary\\Desktop\\Fall_2024\\DATA440\\project-penney-440\\visualization.py:124\u001b[0m, in \u001b[0;36mget_data\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    122\u001b[0m \tjson_object \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(openfile) \t\u001b[38;5;66;03m# Reading from json file      \u001b[39;00m\n\u001b[1;32m--> 124\u001b[0m var_cards \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43mjson_object\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcards\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m    125\u001b[0m var_tricks \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(json_object[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtricks\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'cards'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmake_heatmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\micha\\OneDrive - William & Mary\\Desktop\\Fall_2024\\DATA440\\project-penney-440\\visualization.py:322\u001b[0m, in \u001b[0;36mmake_heatmap\u001b[1;34m(data, data_ties, annots, n, win_type, title, hide_y, cbar_single, ax, bundle, letters, format)\u001b[0m\n\u001b[0;32m    320\u001b[0m     var_cards,var_tricks, card_ties, trick_ties, n_default \u001b[38;5;241m=\u001b[39m get_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults/results.json\u001b[39m\u001b[38;5;124m'\u001b[39m) \n\u001b[0;32m    321\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m--> 322\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults/results.json does not exist. You should run the simulate data function\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m    324\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m win_type\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcards\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;66;03m##makes visualization just for cards (win type specified in saved file)\u001b[39;00m\n\u001b[0;32m    325\u001b[0m     title_cards\u001b[38;5;241m=\u001b[39mtitle\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m (by Cards)\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m(n=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(n_default)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: results/results.json does not exist. You should run the simulate data function"
+     ]
+    }
+   ],
+   "source": [
+    "make_heatmap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82818016",
    "metadata": {},
    "outputs": [],
    "source": []
